Fixing alignment issues on mobile

--- a/src/sections/About/AboutStyles.module.css
+++ b/src/sections/About/AboutStyles.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    width: fit-content;
+    padding-left: 50px;
+    padding-right: 50px;
   }
   
 .paragraph {
