--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -11,6 +11,9 @@
     max-width: 200px;
   }
 
+  .description {
+    text-align: center;
+  }
   span {
     display: flex;
     gap: 25px;
